--- a/W1/D1/P1.html
+++ b/W1/D1/P1.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="discription" content="this is page discription">
+     <meta name="author" content="puneeth">
+
     <title>Document</title>
 </head>
 <body>
