Addead more meta tags and paragraph tags

--- a/W1/D1/P1.html
+++ b/W1/D1/P1.html
@@ -5,10 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta name="discription" content="this is page discription">
      <meta name="author" content="puneeth">
+<!-- facebook instagram linkedin -->
+ <meta property="og title" content="html meta tags example">
+ <meta property="og discription" content="this page demonstrate html tags usages">
+ <meta property="og type" content="https://google.com"/>
+ <meta property="og image" content="image.jpeg">
 
     <title>Document</title>
 </head>
 <body>
-    
+    <p> example for meta tags </p>
 </body>
 </html>
