adding some more meta tags

--- a/W1/D1/P1.html
+++ b/W1/D1/P1.html
@@ -10,6 +10,8 @@
  <meta property="og discription" content="this page demonstrate html tags usages">
  <meta property="og type" content="https://google.com"/>
  <meta property="og image" content="image.jpeg">
+ <meta name="twitter:card" content="summery of the card">
+ <meta name="twitter title" content="meta tags examples">
 
     <title>Document</title>
 </head>
