--- a/W1/D3/P1.html
+++ b/W1/D3/P1.html
@@ -20,7 +20,7 @@
                 <td>9</td>
             </tr>
             <tr>
-                <td>shre</td>
+                <td>shreyas</td>
                 <td>11</td>
             </tr>
         </tbody>
