--- a/W1/D3/P7.html
+++ b/W1/D3/P7.html
@@ -8,7 +8,7 @@
 /* class selector */
     .Paratype1{
       background-color: aqua;
-      font-weight: ;
+      font-weight: 100;
     }
     .Paratype2{
         color: brown;
