--- a/W1/D3/P13.html
+++ b/W1/D3/P13.html
@@ -6,7 +6,7 @@
     <title>Inline element</title>
     <style>
         .Inline-element{
-            display: none;
+            display: flex;
             padding: 5px 10px ;
             border: 1px solid black;
             margin: 10px;
