--- a/W1/D3/P4.html
+++ b/W1/D3/P4.html
@@ -10,6 +10,7 @@
      <iframe src="https://www.wikipedia.org/" frameborder="1" width="800" height="400" title="Google">
 
      </iframe>
+     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62112.20872958545!2d77.05640903957145!3d13.349464536299015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bb02c3b632e23b9%3A0xe15fb239e9d737bb!2sTumakuru%2C%20Karnataka!5e0!3m2!1sen!2sin!4v1771496409480!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
      <iframe src="Test.pdf" frameborder="1" width="800" height="400" title="Google" sandbox="allow-scripts"></iframe>
      <iframe width="560" height="315" src="https://www.youtube.com/embed/P-uMf5Ymv_Q?si=fy9_BcUV4smuzc2f" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
